<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_local_grid</name>
  <version>0.0.0</version>
  <description>Adds a ROS2 publisher for Spot's local grid</description>
  <maintainer email="ry.roche@icloud.com">root</maintainer>
  <license>MIT</license>

  <depend>spot_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
