<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2024 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<package format="3">
  <name>spot_ros2_control</name>
  <version>0.0.0</version>
  <description>Package for using ROS 2 control to use Spot's joint control API</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>spot_hardware_interface</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>spot_description</exec_depend>
  <exec_depend>spot_common</exec_depend>
  <exec_depend>spot_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-yaml</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
