<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_rviz_plugins</name>
  <version>0.0.0</version>
  <description>ROS 2 rviz plugins for Spot.</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>spot_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tl_expected</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
