<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nogo_regions</name>
  <version>0.0.0</version>
  <description>Example of using no-go regions with Spot</description>
  <maintainer email="engineering@theaiinstitute.com">The AI Institute</maintainer>
  <license>MIT</license>

  <exec_depend>bdai_ros2_wrappers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
